# Machine-Learning-Assignment

./: .gitignore  README.md  ca1p1.py  pyproject.toml  requirements.txt
__tests__/: test_model.py
src/: __init__.py  ca1p1.py  ca2p2a.py
